# mcaat

./: .gitignore  .gitmodules  .sync-conflict-20250714-213451-B2XYWL4.timetracker  CMakeLists.txt  Dockerfile  compile_commands.json  install.sh  readme.md
include/: Doxyfile  cycle_filter.h  cycle_finder.h  evaluation.h  filters.h  graph_generic_func.h  io_ops.h  isolate_protospacers.h  jumps.h  main_run_and_debug.h  node_counter.h  path_writer.h  phage_curator.h  post_processing.h  reads.h  sequence_generic_func.h  settings.h  spacer_ordering.h  tmp_utils.h
playground/: Cargo.toml  output.dot
playground/src/: assembly.rs  cycle.rs  graph.rs  main.rs  matching_assembly.rs  reads.rs  tree.rs
results/: CRISPR_Arrays.txt
src/: cycle_filter.cpp  cycle_finder.cpp  educational_readme_developer.md  evaluation.cpp  filters.cpp  graph_generic_func.cpp  io_ops.cpp  isolate_protospacers.cpp  jumps.cpp  main.cpp  main_run_and_debug.cpp  path_writer.cpp  phage_curator.cpp  reads.cpp  sdbg_build.cpp  spacer_ordering.cpp  tmp_utils.cpp  z_educational_guide.md  z_optimization_dev_notes.md
tests/: construct_test_data.h  test_jumps.cpp  test_reads.cpp  test_spacer_ordering.cpp
